s3cmd 0.9.8.1 -   2008-06-27
=============
* Bugfix release. Fixed 'mb' and 'rb' commands again.

s3cmd 0.9.8   -   2008-06-23
===========
* Added --exclude / --rexclude options for sync command.
* Doesn't require $HOME env variable to be set anymore.
* Better checking of bucket names to Amazon S3 rules.

s3cmd 0.9.7   -   2008-06-05
===========
* Implemented 'sync' from S3 back to local folder, including
  file attribute restoration.
* Failed uploads are retried on lower speed to improve error
  resilience.
* Compare MD5 of the uploaded file, compare with checksum
  reported by S3 and re-upload on mismatch.

s3cmd 0.9.6   -   2008-02-28
===========
* Support for setting / guessing MIME-type of uploaded file
* Correctly follow redirects when accessing buckets created
  in Europe.
* Introduced 'info' command both for buckets and objects
* Correctly display public URL on uploads
* Updated TODO list for everyone to see where we're heading
* Various small fixes. See ChangeLog for details.

s3cmd 0.9.5   -   2007-11-13
===========
* Support for buckets created in Europe
* Initial 'sync' support, for now local to s3 direction only
* Much better handling of multiple args to put, get and del
* Tries to use ElementTree from any available module
* Support for buckets with over 1000 objects.

s3cmd 0.9.4   -   2007-08-13
===========
* Support for transparent GPG encryption of uploaded files
* HTTP proxy support
* HTTPS protocol support
* Support for non-ASCII characters in uploaded filenames

s3cmd 0.9.3   -   2007-05-26
===========
* New command "du" for displaying size of your data in S3.
  (Basil Shubin)

s3cmd 0.9.2   -   2007-04-09
===========
* Lots of new documentation
* Allow "get" to stdout (use "-" in place of destination file
  to get the file contents on stdout)
* Better compatibility with Python 2.4
* Output public HTTP URL for objects stored with Public ACL
* Various bugfixes and improvements

s3cmd 0.9.1   -   2007-02-06
===========